--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -15,10 +7,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
@@ -27,9 +17,15 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Start MySQL
+      run: sudo systemctl start mysql
+    - name: Set up MySQL database
+      run: mysql --user=root --password=root --host 127.0.0.1 < src/main/resources/database.sql
+    - name: Add sample data to MySQL database
+      run: mysql --user=root --password=root --host 127.0.0.1 < src/main/resources/sample-data.sql
+    - name: Create MySQL admin user to access database
+      run: mysql --user=root --password=root --host 127.0.0.1 < src/main/resources/admin-user.sql
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      run: mvn -B package
+    - name: Test with Maven
+      run: mvn -B test
