--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/lesson9
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: lesson9
-    password: lesson9
+    username: ${LESSON9_USER}
+    password: ${LESSON9_PASSWORD}
   jpa:
     hibernate:
       naming:
